tests/lean/error_pos_bug.lean.expected.out
error_pos_bug.lean:9:0: error: type error in placeholder assigned to
  λ (a : Category) (b : Category) (c : Category),
    a
placeholder has type
  Category
but is expected to have type
  Type
the assignment was attempted when trying to solve
    type mismatch at application
      Category.mk a (category.mk b c)
    term
      category.mk b c
    has type
      category a
    but is expected to have type
      category a
